# cpp-coursera-tasks

./: .gitignore  README.md
red_belt/week1/: deque.cc  log.cc  max_element_if.cc  paginator.cc  print_values.cc  sort_by.cc  table.cc  uniq_id.cc  update_field.cc
red_belt/week2/: booking.cc  ebook.cc  express.cc  learner.cc
red_belt/week3 /: linked_list.cc  object_pool.cc  simple_vector.h  swap_sort_copy.cc  test_runner.h
red_belt/week4/: airport_counter.cc  athlets.cc  football.cc  stack_vector.h  text_editor.cc  translator.cc
red_belt/week5/: calculate_matrix_sum.cc  concurrent_map.cc  explore_key_words.cc  group_heavy.cc  joseph_permutations.cc  merge_sort3.cc  priority_collection_2.cc  simple_vector.h  simple_vector_2.h  split_into_sentences.cc  synchronized.cc
red_belt/week6/: iterator_range.h  main.cpp  parse.cpp  parse.h  search_server.cpp  search_server.h  search_server_mt.cpp  search_server_mt.h
white_belt/: .gitignore
white_belt/week1/: dec_to_bin.cc  discount.cc  div.cc  equat.cc  even.cc  find_second_f.cc  gcd.cc  small_string.cc
white_belt/week2/: anagram.cc  build_map_values_set.cc  bus_stops1.cc  bus_stops2.cc  bus_stops3.cc  country_reference.cc  factorial.cc  palindrom.cc  palindrom_filter.cc  queue.cc  reference.cc  reverse.cc  reverse_copy.cc  string_move.cc  synonym.cc  temperature.cc  (+3 more)
yellow_belt/week6/: CMakeLists.txt  condition_parser.cc  condition_parser.h  condition_parser_test.cc  database.cc  database.h  database_test.cc  date.cc  date.h  date_test.cc  main.cc  node.cc  node.h  node_test.cc  test_runner.h  token.cc  token.h
(+75 files in other folders)
